@@ -1,12 +1,12 @@
 {
   "name": "patternlab-node",
   "description": "Pattern Lab is a collection of tools to help you create atomic design systems. This is the node command line interface (CLI).",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "./builder/patternlab.js",
   "dependencies": {
     "diveSync": "^0.3.0",
     "fs-extra": "^0.26.2",
-    "glob": "^6.0.1",
+    "glob": "^7.0.0",
     "html-entities": "^1.2.0",
     "matchdep": "^1.0.0",
     "mustache": "^2.2.0"
