@@ -1,5 +1,8 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-node-v1.1.1
+- FIX: Fixed issue where alternate patterns are added to end of styleguide instead of inline with their parent pattern.
+
 PL-node-v1.1.0
 - FIX: Fixed issue where partials containing styleModifiers with integers were not found correctly under all circumstances
 - FIX: Fixed issue where excluded patterns were still rendered on the Pattern Lab site. Now they do not directly get rendered via the menu, view all links, or the styleguide, but are accessible for inclusion as pattern partials, and can be accessed via lineage.
